# fuzzy-guide

./: .gitignore  Makefile  README.md
scripts/: file_utils.py  (+1 more)
service/: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  manage.py  newrelic.ini  pyproject.toml  pytest.ini
service/api/tests/: view_test_case.py
service/api/v1/: urls.py
service/api/v1/views/: widget_view.py
service/api/v1/views/tests/: test_widget_view.py
service/common_lib/: README.md  base_machine.py  base_model.py  blink_requests_async.py  cached_basic_auth_model_backend.py  decorators.py  enum_mixin.py  error_reason_types.py  errors.py  event.py  json.py  mock_http_response.py  service_enums.py  tenant_aware_model.py
service/common_lib/cli/: README.md  prompt.py  utils.py
service/common_lib/django/: base_api_view.py  base_message_api_view.py  base_serializer.py
service/common_lib/django/drf/: decorators.py  error_handling.py  filters.py  pagination.py
service/common_lib/django/drf/tests/: test_error_handling.py
service/common_lib/middleware/: tenant_id_middleware.py
service/common_lib/tests/: test_cached_basic_auth_model_backend.py  test_event.py
service/core/: admin.py  constants.py  dtos.py  events.py
service/core/clients/: foo_client.py
service/core/clients/mocks/: client_mock_constants.py  foo_client_mocks.py
service/core/clients/tests/: test_foo_client.py
service/core/migrations/: 0001_initial.py
service/core/models/: __init__.py  user.py  widget.py
service/core/services/: event_service.py  user_service.py  widget_service.py
service/core/services/tests/: test_event_service.py
service/core/tests/: factories.py  test_scenarios.py
service/django_service_bootstrap/: asgi.py  latest_migrations.txt  urls.py  wsgi.py
service/django_service_bootstrap/management/commands/: makemigrations.py  ops_tool.py  reset_service_db.py
service/django_service_bootstrap/management/commands/ops_tool_impl/: README.md  messaging_management.py  user_management.py
service/django_service_bootstrap/settings/: __init__.py  base.py  dev.py  local.py  prod.py  secrets_manager.py  staging.py  test.py
service/message_consumer/: apps.py  consumer.py
(+15 files in other folders)
